@@ -1,7 +1,6 @@
 package inc::MakeMaker;
 
 use Moose;
-use Devel::CheckLib;
 
 extends 'Dist::Zilla::Plugin::MakeMaker::Awesome';
 
@@ -9,10 +8,10 @@ override _build_MakeFile_PL_template => sub {
 	my ($self) = @_;
 
 	my $template  = <<'TEMPLATE';
-use Devel::CheckLib;
-
-check_lib_or_exit(lib => 'dl') if $^O ne 'MSWin32';
-check_lib_or_exit(lib => 'ffi');
+chdir('xs/libffi');
+system('./configure --disable-builddir --with-pic');
+system('make');
+chdir('../..');
 
 TEMPLATE
 
@@ -22,9 +21,8 @@ TEMPLATE
 override _build_WriteMakefile_args => sub {
 	return +{
 		%{ super() },
-		LIBS	=> ['-lffi'],
-		INC	=> '-I.',
-		OBJECT	=> '$(O_FILES)',
+		INC	=> '-I. -Ixs/libffi/include',
+		OBJECT	=> '$(O_FILES) xs/libffi/.libs/libffi.a',
 	}
 };
 
